[project]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = [
    {name = "kinyuki",email = "74060654+kinyuki0510@users.noreply.github.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
debugpy = ">=1.8.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
